resources/sass/markdown.scss
.markdown {
    a {
        @apply underline;
    }

    h1 {
        @apply text-3xl font-lato font-bold mb-4;
    }

    h2 {
        @apply text-2xl font-lato font-bold mb-4;
    }

    h3 {
        @apply text-lg font-lato font-bold mb-4;
    }

    h4 {
        @apply text-base font-lato mb-4;
    }

    img {
        @apply max-w-full;
    }

    p {
        @apply my-4;
    }

    blockquote {
        @apply border-l-4 border-gray-200 pl-2 ml-2;
    }

    hr {
        @apply my-4;
    }

    code {
        @apply bg-gray-100 rounded p-1;
    }

    pre {
        @apply block border-2 border-gray-800 shadow-solid-gray-800 max-w-full my-4;

        code {
            @apply block max-w-full overflow-x-auto whitespace-pre rounded-none p-6;
        }
    }

    ol {
        @apply list-decimal;

        li {
            @apply ml-8 mb-2;
        }
    }

    ul {
        @apply list-disc;

        li {
            @apply ml-8 mb-2;
        }
    }

    .note, .info, .warning, .danger {
        @apply relative border-l-4 my-4 p-6 pl-16;

        &:before {
            @apply absolute top-0 left-0 py-6 pl-6 text-xl;
        }

        > *:first-child {
            @apply mt-0;
        }

        > *:last-child {
            @apply mb-0;
        }
    }

    .note {
        @apply bg-gray-50 border-gray-400;

        &:before {
            content: "🗒️";
        }
    }

    .info {
        @apply bg-blue-50 border-blue-400;

        &:before {
            content: "ℹ️";
        }
    }

    .warning {
        @apply bg-yellow-50 border-yellow-400;

        &:before {
            content: "⚠️";
        }
    }

    .danger {
        @apply bg-red-50 border-red-400;

        &:before {
            content: "⛔";
        }
    }

    .video {
        @apply relative h-0 z-0;
        padding-bottom: 56.25%; /* 16:9 */
    }

    .video iframe {
        @apply absolute top-0 left-0 w-full h-full;
    }
}

